@@ -2,7 +2,7 @@
 <?org-vrjuggler-jccl-settings configuration.version="3.0"?>
 <configuration xmlns="http://www.vrjuggler.org/jccl/xsd/3.0/configuration" name="Configuration" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.vrjuggler.org/jccl/xsd/3.0/configuration http://www.vrjuggler.org/jccl/xsd/3.0/configuration.xsd">
    <elements>
-      <simulated_analog_device name="AnalogSimulator0" version="2">
+      <simulated_analog_device name="AnalogSimulator0" version="3">
          <keyboard_mouse_proxy>Sim Analog Keyboard Proxy</keyboard_mouse_proxy>
          <increment_keypress>
             <key_modifier_pair name="Increment Keypress 0" version="1">
@@ -32,6 +32,7 @@
          <min>0.0</min>
          <max>1023.0</max>
          <initial_value>512.0</initial_value>
+         <auto_return>false</auto_return>
       </simulated_analog_device>
       <keyboard_mouse_device name="Sim Analog Keyboard" version="2">
          <mouse_sensitivity>1.0</mouse_sensitivity>
