@@ -111,4 +111,82 @@
          </xsl:stylesheet>
       </upgrade_transform>
    </definition_version>
+   <definition_version version="3" label="Simulated Analog Device">
+      <abstract>false</abstract>
+      <help>A simulated analog device that gets its input from a keyboard/mouse input handler (through a proxy). (&lt;a href="http://www.infiscape.com/documentation/vrjuggler-config/3.0/configuring_vr_juggler/ch02s02.html#section.sim.devices"&gt;more on simulator devices&lt;/a&gt;, &lt;a href="http://www.infiscape.com/documentation/vrjuggler-config/3.0/configuring_vr_juggler/ch02.html"&gt;more on input devices&lt;/a&gt;)</help>
+      <parent>analog_device</parent>
+      <category>/Devices/Analog</category>
+      <property valuetype="configelementpointer" variable="false" name="keyboard_mouse_proxy">
+         <help>The proxy to keyboard/mouse input handler to use for user input. (&lt;a href="http://www.infiscape.com/documentation/vrjuggler-config/3.0/configuring_vr_juggler/ch02s02.html#section.sim.devices"&gt;more ...&lt;/a&gt;)</help>
+         <value label="Keyboard/Mouse Proxy"/>
+         <allowed_type>keyboard_mouse_proxy</allowed_type>
+      </property>
+      <property valuetype="configelement" variable="true" name="increment_keypress">
+         <help>The keys used for incrementing the input value. (&lt;a href="http://www.infiscape.com/documentation/vrjuggler-config/3.0/configuring_vr_juggler/ch02s02.html#section.sim.devices"&gt;more ...&lt;/a&gt;)</help>
+         <value label="Increment Key"/>
+         <allowed_type>key_modifier_pair</allowed_type>
+      </property>
+      <property valuetype="configelement" variable="true" name="decrement_keypress">
+         <help>The keys used for decrementing the input value. (&lt;a href="http://www.infiscape.com/documentation/vrjuggler-config/3.0/configuring_vr_juggler/ch02s02.html#section.sim.devices"&gt;more ...&lt;/a&gt;)</help>
+         <value label="Decrement Key"/>
+         <allowed_type>key_modifier_pair</allowed_type>
+      </property>
+      <property valuetype="float" variable="false" name="delta">
+         <help>The amount that the analog data changes per increment or decrement keypress. (&lt;a href="http://www.infiscape.com/documentation/vrjuggler-config/3.0/configuring_vr_juggler/ch02s02.html#section.sim.devices"&gt;more ...&lt;/a&gt;)</help>
+         <value label="Delta" defaultvalue="1.0"/>
+      </property>
+      <property valuetype="float" variable="false" name="min">
+         <help>The lower bound for the range of valid values for the analog data. (&lt;a href="http://www.infiscape.com/documentation/vrjuggler-config/3.0/configuring_vr_juggler/ch02s02.html#section.sim.devices"&gt;more ...&lt;/a&gt;)</help>
+         <value label="Range Minimum" defaultvalue="0.0"/>
+      </property>
+      <property valuetype="float" variable="false" name="max">
+         <help>The upper bound for the range of valid values for the analog data. (&lt;a href="http://www.infiscape.com/documentation/vrjuggler-config/3.0/configuring_vr_juggler/ch02s02.html#section.sim.devices"&gt;more ...&lt;/a&gt;)</help>
+         <value label="Range Maximum" defaultvalue="255.0"/>
+      </property>
+      <property valuetype="float" variable="false" name="initial_value">
+         <help>The initial value of all the analog inputs on this device. (&lt;a href="http://www.infiscape.com/documentation/vrjuggler-config/3.0/configuring_vr_juggler/ch02s02.html#section.sim.devices"&gt;more ...&lt;/a&gt;)</help>
+         <value label="Initial Value" defaultvalue="0.0"/>
+      </property>
+      <property valuetype="boolean" variable="false" name="auto_return">
+        <help>If true the analog will return to inital_value when no keys are pressed. (&lt;a href="http://www.infiscape.com/documentation/vrjuggler-config/3.0/configuring_vr_juggler/ch02s02.html#section.sim.devices"&gt;more ...&lt;/a&gt;)</help>
+        <value label="Auto Return" defaultvalue="false"/>
+      </property>
+      <upgrade_transform>
+         <xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:jconf="http://www.vrjuggler.org/jccl/xsd/3.0/configuration" version="1.0">
+            <xsl:output method="xml" version="1.0" encoding="UTF-8" indent="yes"/>
+            <xsl:variable name="jconf">http://www.vrjuggler.org/jccl/xsd/3.0/configuration</xsl:variable>
+
+            <xsl:template match="/">
+                <xsl:apply-templates/>
+            </xsl:template>
+
+            <xsl:template match="jconf:simulated_analog_device">
+               <xsl:element namespace="{$jconf}" name="simulated_analog_device">
+                  <xsl:attribute name="name">
+                     <xsl:value-of select="@name"/>
+                  </xsl:attribute>
+                  <xsl:attribute name="version">
+                     <xsl:text>3</xsl:text>
+                  </xsl:attribute>
+                  <xsl:copy-of select="./jconf:keyboard_mouse_proxy"/>
+                  <xsl:for-each select="./jconf:increment_keypress">
+                     <xsl:copy-of select="."/>
+                  </xsl:for-each>
+                  <xsl:for-each select="./jconf:decrement_keypress">
+                     <xsl:copy-of select="."/>
+                  </xsl:for-each>
+                  <xsl:copy-of select="./jconf:delta"/>
+                  <xsl:copy-of select="./jconf:min"/>
+                  <xsl:copy-of select="./jconf:max"/>
+                  <xsl:copy-of select="./jconf:initial_value"/>
+                  <xsl:copy-of select="./jconf:device_host"/>
+                  <xsl:element namespace="{$jconf}" name="auto_return">
+                     <xsl:text>false</xsl:text>
+                  </xsl:element>
+               </xsl:element>
+            </xsl:template>
+         </xsl:stylesheet>
+      </upgrade_transform>
+   </definition_version>
+
 </definition>
