@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jun-19-2010 patrick     Added an "auto-return" feature to simulated analog
+                        devices.
+                        Submitted by Carsten Neumann.
+                        NEW VERSION: 1.3.31
 May-08-2010 patrick     Changed window/mouse interaction for the X11 case.
                         Submitted by Doug McCorkle.
                         NEW VERSION: 1.3.30
